--- a/404.html
+++ b/404.html
@@ -1,2 +1,157 @@
-<h1>404</h1>
-<h2>Sorry There's An Error</h2></body>
+<html lang="en">
+  <head>
+  
+  <style>
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
+:root {
+  --blue: #0e0620;
+  --white: #fff;
+  --green: #2ccf6d;
+}
+html,
+body {
+  height: 80%;
+}
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family:"Nunito Sans";
+  color: var(--blue);
+  font-size: 1em;
+}
+button {
+  font-family:"Nunito Sans";
+}
+ul {
+  list-style-type: none;
+  padding-inline-start: 35px;
+}
+svg {
+  width: 100%;
+  visibility: hidden;
+}
+h1 {
+  font-size: 7.5em;
+  margin: 15px 0px;
+  font-weight:bold;
+}
+h2 {
+  font-weight:bold;
+}
+.hamburger-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 35px;
+  z-index: 2;
+  margin-left:10vw;
+  height:80vh;
+
+  & button {
+    position: relative;
+    width: 30px;
+    height: 22px;
+    border: none;
+    background: none;
+    padding: 0;
+    cursor: pointer;
+
+    & span {
+      position: absolute;
+      height: 3px;
+      background: #000;
+      width: 100%;
+      left: 0px;
+      top: 0px;
+      transition: 0.1s ease-in;
+      &:nth-child(2) {
+        top: 9px;
+      }
+      &:nth-child(3) {
+        top: 18px;
+      }
+    }
+  }
+  & [data-state="open"] {
+    & span {
+      &:first-child {
+        transform: rotate(45deg);
+        top: 10px;
+      }
+      &:nth-child(2) {
+        width: 0%;
+        opacity:0;
+      }
+      &:nth-child(3) {
+        transform: rotate(-45deg);
+        top: 10px;
+      }
+    }
+  }
+}
+
+.btn {
+  z-index: 1;
+  overflow: hidden;
+  background: transparent;
+  position: relative;
+  padding: 8px 50px;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 1em;
+  letter-spacing: 2px;
+  transition: 0.2s ease;
+  font-weight: bold;
+  margin: 5px 0px;
+}
+.green {
+    border: 4px solid #2ccf6d;
+    color: #000a0a;
+  }
+.green:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 0%;
+      height: 100%;
+      background: #2ccf6d;
+      z-index: -1;
+      transition: 0.2s ease;
+    }
+
+
+@media screen and (max-width:768px) {
+  body {
+    display:block;
+  }
+  .container {
+    margin-top:70px;
+    margin-bottom:70px;
+  }
+} 
+</style>
+  </head>
+  <body>
+
+<div class="hamburger-menu">
+<main>
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-6 align-self-center">
+        <h1>404</h1>
+        <h2>UH OH! You're lost.</h2>
+        <p>The page you are looking for does not exist.
+          How you got here is a mystery. But you can click the button below
+          to go back to the homepage.
+        </p>
+        <button class="btn green" onclick="location.href = 'https://thegd.space/';">HOME</button>
+      </div>
+    </div>
+  </div>
+</main>
+
+  </body>
+</html>
