--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   font-family:"Nunito Sans";
   color: var(--blue);
-  font-size: 1em;
+  font-size: 3vh;
 }
 button {
   font-family:"Nunito Sans";
