--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   font-family:"Nunito Sans";
   color: var(--blue);
-  font-size: 3vh;
+  font-size: 2.5vh;
 }
 button {
   font-family:"Nunito Sans";
@@ -99,7 +99,7 @@ h2 {
   padding: 8px 50px;
   border-radius: 30px;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 1em !important;
   letter-spacing: 2px;
   transition: 0.2s ease;
   font-weight: bold;
