--- a/index.html
+++ b/index.html
@@ -1,10 +1,213 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-	<title>Test</title>
-</head
-  <body>
-	<h2> Welcome to My  world </h2>
-</body>
+<html lang="en">
+  <head>
+  <title>Games</title>
+    <style>
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
 
+body{
+  background: #313131;
+}
+
+.card_loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 40px 0;
+
+}
+img{
+  width: 180px;
+  }
+.container .card {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+  overflow: hidden;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+      background: #fafafa;
+}
+.container .card .content {
+  position: absolute;
+  bottom: -160px;
+  width: 100%;
+  height: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  flex-direction: column;
+  backdrop-filter: blur(15px);
+  box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  transition: bottom 0.5s;
+  transition-delay: 0.65s;
+}
+.container .card:hover .content {
+  bottom: 0;
+  transition-delay: 0s;
+}
+.container .card .content .contentBx h3 {
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 2px;
+  font-weight: 500;
+  font-size: 18px;
+  color: #000000;
+  text-align: center;
+  margin: 20px 0 15px;
+  line-height: 1.1em;
+  transition: 0.5s;
+  transition-delay: 0.6s;
+  opacity: 0;
+  transform: translateY(-20px);
+}
+.container .card:hover .content .contentBx h3 {
+  opacity: 1;
+  transform: translateY(0);
+}
+.container .card .content .contentBx h3 span {
+  font-size: 12px;
+  font-weight: 300;
+  text-transform: initial;
+}
+.container .card .content .sci {
+  position: relative;
+  bottom: 10px;
+  display: flex;
+}
+.container .card .content .sci li {
+  list-style: none;
+  margin: 0 10px;
+  transform: translateY(40px);
+  transition: 0.5s;
+  opacity: 0;
+  transition-delay: calc(0.2s * var(--i));
+}
+
+.container .card:hover .content .sci li {
+  transform: translateY(0);
+  opacity: 1;
+}
+.container .card .content .sci li a {
+  color: white;
+  font-size: 24px;
+}
+.title {
+	text-align: center;
+	margin-bottom: 4rem;
+	margin-top : 5vh;
+	color : #fbfbfb
+	
+}
+.underline {
+	height: 0.25rem;
+	width: 20rem;
+	background: hsl(205, 78%, 60%);
+	margin-left: auto;
+	margin-right: auto;
+}
+
+h1,
+h2,
+h3,
+h4 {
+	letter-spacing: 0.1rem;
+	text-transform: capitalize;
+	line-height: 1.25;
+	margin-bottom: 0.75rem;
+	font-family: "Poppins", sans-serif;
+	font-size: 2rem;
+}
+	
+</style>
+	<script type="text/javascript">
+
+		</script>
+  </head>
+<body>
+		<div class="title">
+			<h2>GAMES</h2>
+			<div class="underline"></div>
+		</div>
+	
+<div class ="card_loader">
+    <div class="container">
+      <div class="card">
+        <div class="imgBx">
+          <img
+            src="Kt.png"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <div class="contentBx">
+            <h3>Knight's Tour<br /><br /><span>A chess puzzle in which the task is to move a knight across the board.</span></h3>
+          </div>
+        </div>
+      </div>
+	        <div class="card">
+        <div class="imgBx">
+          <img
+            src="CS.png"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <div class="contentBx">
+            <h3>Color Sole<br /><br /><span>Comming Soon</span></h3>
+          </div>
+        </div>
+      </div>
+	  		        <div class="card">
+        <div class="imgBx">
+          <img
+            src="lt1.png"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <div class="contentBx">
+            <h3>Illuminate<br /><br /><span>Comming Soon</span></h3>
+          </div>
+        </div>
+      </div>
+
+	  	  		        <div class="card">
+        <div class="imgBx">
+          <img
+            src="iwu2.png"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <div class="contentBx">
+            <h3>Islands<br /><br /><span>Comming Soon</span></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+	    </div>
+</body>
 </html>
