--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ h4 {
 	
 <div class ="card_loader">
     <div class="container">
-      <div class="card">
+      <div class="card" onclick="location.href = 'https://thegd.space/knightstour/';"> 
         <div class="imgBx">
           <img
             src="Kt.png"
