--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
   <head>
   <title>Games</title>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Lemonada:wght@300&display=swap" rel="stylesheet">
     <style>
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 * {
@@ -9,9 +11,14 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+@media screen and (max-width: 768px){
+.container {
+  display: table-row !important;
+  }
+ }
 
 body{
-  background: #313131;
+  background: #FBFDFA ;
 }
 
 .card_loader {
@@ -29,7 +36,7 @@ body{
   margin: 40px 0;
 
 }
-img{
+.imgBx img{
   width: 180px;
   }
 .container .card {
@@ -47,7 +54,7 @@ img{
 }
 .container .card .content {
   position: absolute;
-  bottom: -160px;
+  bottom: -180px;
   width: 100%;
   height: 160px;
   display: flex;
@@ -66,6 +73,7 @@ img{
   bottom: 0;
   transition-delay: 0s;
 }
+
 .container .card .content .contentBx h3 {
   text-transform: uppercase;
   color: #fff;
@@ -74,7 +82,7 @@ img{
   font-size: 18px;
   color: #000000;
   text-align: center;
-  margin: 20px 0 15px;
+  margin: 15px;
   line-height: 1.1em;
   transition: 0.5s;
   transition-delay: 0.6s;
@@ -135,20 +143,49 @@ h4 {
 	text-transform: capitalize;
 	line-height: 1.25;
 	margin-bottom: 0.75rem;
-	font-family: "Poppins", sans-serif;
+	font-family: 'Lemonada', cursive;
 	font-size: 2rem;
 }
-	
+.fixedHeaderContainer {
+    color: rgb(255, 255, 255);
+    min-height: 50px;
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
+    transform: translateZ(0px);
+    background: #7bc353 	;
+    padding: 8px 0px;
+}
+.logo{
+  width: 100%;
+    background: #e9f5e7
+	}
+.img-central {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 12px;
+  width: 50%;
+
+}
+
+.header{
+  margin-top: 5vh;
+  margin-left: 10vw;
+}
 </style>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
 	<script type="text/javascript">
 
 		</script>
   </head>
 <body>
-		<div class="title">
-			<h2>GAMES</h2>
-			<div class="underline"></div>
-		</div>
+<div class="fixedHeaderContainer"></div>
+
+<div class="logo"><img src="4.PNG" class="img-central"></div>	  
+<div class="header"><h2> Games :</h2></div>	
 	
 <div class ="card_loader">
     <div class="container">
@@ -168,7 +205,7 @@ h4 {
 	        <div class="card">
         <div class="imgBx">
           <img
-            src="CS.png"
+            src="csn2.png"
             alt=""
           />
         </div>
@@ -181,7 +218,7 @@ h4 {
 	  		        <div class="card">
         <div class="imgBx">
           <img
-            src="lt1.png"
+            src="ltx1.png"
             alt=""
           />
         </div>
@@ -195,7 +232,7 @@ h4 {
 	  	  		        <div class="card">
         <div class="imgBx">
           <img
-            src="iwu2.png"
+            src="iwx2.png"
             alt=""
           />
         </div>
