--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ h4 {
 	        <div class="card">
         <div class="imgBx">
           <img
-            src="csn2.png"
+            src="csn2.PNG"
             alt=""
           />
         </div>
@@ -232,7 +232,7 @@ h4 {
 	  	  		        <div class="card">
         <div class="imgBx">
           <img
-            src="iwx2.png"
+            src="iwx2.PNG"
             alt=""
           />
         </div>
