--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 .container {
   display: table-row !important;
   }
+  
+  .img-central {
+  padding-top: 5vh !important;
+ }
+ 
+ .imgBx img{
+  width: 120px !important;
+  }
+.container .card {
+  width: 150px !important;
+  height: 150px !important;
+  }
+
+  .container .card .content .contentBx h3 {
+  letter-spacing: 1px !important;
+  font-size: 12px !important;
+  }
  }
 
 body{
@@ -62,7 +79,8 @@ body{
   align-items: center;
   z-index: 10;
   flex-direction: column;
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 15px;
@@ -160,6 +178,7 @@ h4 {
   width: 100%;
     background: #e9f5e7
 	}
+	
 .img-central {
   display: block;
   margin-left: auto;
