--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ h4 {
 <div class="fixedHeaderContainer"></div>
 
 <div class="logo"><img src="4.PNG" class="img-central"></div>	  
-<div class="header"><h2> Games :</h2></div>	
+<!--<div class="header"><h2> Games :</h2></div>	-->
 	
 <div class ="card_loader">
     <div class="container">
