--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ h4 {
           </div>
         </div>
       </div>
-	        <div class="card">
+	        <div class="card" onclick="location.href = 'https://thegd.space/colorsole/';">
         <div class="imgBx">
           <img
             src="csn2.PNG"
@@ -230,7 +230,7 @@ h4 {
         </div>
         <div class="content">
           <div class="contentBx">
-            <h3>Color Sole<br /><br /><span>Comming Soon</span></h3>
+            <h3>Color Sole<br /><br /><span>ColorSole is a color-elimination puzzle based on a square grid filled with different color. </span></h3>
           </div>
         </div>
       </div>
