--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@ h4 {
 	<script type="text/javascript">
 
 		</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B912FBBXE2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B912FBBXE2');
+</script>
   </head>
 <body>
 <div class="fixedHeaderContainer"></div>
