--- a/404.html
+++ b/404.html
@@ -132,6 +132,15 @@ h2 {
   }
 } 
 </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B912FBBXE2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B912FBBXE2');
+</script>
   </head>
   <body>
 
