--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-  
+  <title>404</title>
   <style>
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
 :root {
