--- a/index.html
+++ b/index.html
@@ -20,17 +20,36 @@
   padding-top: 5vh !important;
  }
  
+ .imgBx{
+     padding-right: 45vw  !important;
+ }
+ 
  .imgBx img{
-  width: 120px !important;
+  width: 30vw !important;
   }
 .container .card {
-  width: 150px !important;
+  width: 80vw !important;
   height: 150px !important;
+  }
+  
+  .container .card .content {
+   bottom: 0px  !important;
+   backdrop-filter: blur(0px) !important;
+  -webkit-backdrop-filter: blur(0px) !important;
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0) !important;
+  border: 0px solid rgba(255, 255, 255, 0) !important;
+  border-radius: 0px !important;
+    transition: bottom 0s !important;
+  transition-delay: 0s !important;
+  padding-left: 35vw !important;
+  
   }
 
   .container .card .content .contentBx h3 {
   letter-spacing: 1px !important;
   font-size: 12px !important;
+    opacity: 1 !important;
+  transform: translateY(0px) !important;
   }
  }
 
@@ -243,7 +262,22 @@ h4 {
           </div>
         </div>
       </div>
-	  		        <div class="card">
+      <div class="card" onclick="location.href = 'https://thegd.space/island/';">
+        <div class="imgBx">
+          <img
+            src="iwx2.PNG"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <div class="contentBx">
+            <h3>Islands<br /><br /><span>Island a binary determination puzzle based on Nurikabe.</span></h3>
+          </div>
+        </div>
+      </div>
+
+
+	  <div class="card">
         <div class="imgBx">
           <img
             src="ltx1.png"
@@ -257,19 +291,7 @@ h4 {
         </div>
       </div>
 
-	  	  		        <div class="card">
-        <div class="imgBx">
-          <img
-            src="iwx2.PNG"
-            alt=""
-          />
-        </div>
-        <div class="content">
-          <div class="contentBx">
-            <h3>Islands<br /><br /><span>Comming Soon</span></h3>
-          </div>
-        </div>
-      </div>
+
     </div>
     </div>
 
