--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ h4 {
       </div>
 
 
-	  <div class="card">
+	  <div class="card" onclick="location.href = ' https://thegd.space/illuminate/';">
         <div class="imgBx">
           <img
             src="ltx1.png"
@@ -286,7 +286,7 @@ h4 {
         </div>
         <div class="content">
           <div class="contentBx">
-            <h3>Illuminate<br /><br /><span>Comming Soon</span></h3>
+            <h3>Illuminate<br /><br /><span>Illuminate is a puzzle game consisting of a grid of lights.</span></h3>
           </div>
         </div>
       </div>
