--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <title>Games</title>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Lemonada:wght@300&display=swap" rel="stylesheet">
+<meta property="og:title" content="Game Space">
+<meta property="og:description" content="Space for Creative Thinking">
+<meta property="og:image" content="https://thegd.space/4.PNG">
+<meta property="og:url" content="https://thegd.space/">
+<meta name="twitter:card" content="summary_large_image">	  
+	  
     <style>
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 * {
