--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Lemonada:wght@300&display=swap" rel="stylesheet">
 <meta property="og:title" content="Game Space">
 <meta property="og:description" content="Space for Creative Thinking">
-<meta property="og:image" content="https://thegd.space/4.PNG">
-<meta property="og:url" content="https://thegd.space/">
+<meta property="og:image" content="https://minigames.tech/4.PNG">
+<meta property="og:url" content="https://minigames.tech/">
 <meta name="twitter:card" content="summary_large_image">	  
 	  
     <style>
