--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ h4 {
 	
 <div class ="card_loader">
     <div class="container">
-      <div class="card" onclick="location.href = 'https://thegd.space/knightstour/';"> 
+      <div class="card" onclick="location.href = 'https://minigames.tech/knightstour/';"> 
         <div class="imgBx">
           <img
             src="Kt.png"
@@ -255,7 +255,7 @@ h4 {
           </div>
         </div>
       </div>
-	        <div class="card" onclick="location.href = 'https://thegd.space/colorsole/';">
+	        <div class="card" onclick="location.href = 'https://minigames.tech/colorsole/';">
         <div class="imgBx">
           <img
             src="csn2.PNG"
@@ -268,7 +268,7 @@ h4 {
           </div>
         </div>
       </div>
-      <div class="card" onclick="location.href = 'https://thegd.space/island/';">
+      <div class="card" onclick="location.href = 'https://minigames.tech/island/';">
         <div class="imgBx">
           <img
             src="iwx2.PNG"
@@ -283,7 +283,7 @@ h4 {
       </div>
 
 
-	  <div class="card" onclick="location.href = ' https://thegd.space/illuminate/';">
+	  <div class="card" onclick="location.href = ' https://minigames.tech/illuminate/';">
         <div class="imgBx">
           <img
             src="ltx1.png"
