--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Lemonada:wght@300&display=swap" rel="stylesheet">
 <meta property="og:title" content="Game Space">
 <meta property="og:description" content="Space for Creative Thinking">
-<meta property="og:image" content="https://minigames.tech/4.PNG">
-<meta property="og:url" content="https://minigames.tech/">
+<meta property="og:image" content="https://minigame.host/4.PNG">
+<meta property="og:url" content="https://minigame.host/">
 <meta name="twitter:card" content="summary_large_image">	  
 	  
     <style>
@@ -242,7 +242,7 @@ h4 {
 	
 <div class ="card_loader">
     <div class="container">
-      <div class="card" onclick="location.href = 'https://minigames.tech/knightstour/';"> 
+      <div class="card" onclick="location.href = 'https://minigame.host/knightstour/';"> 
         <div class="imgBx">
           <img
             src="Kt.png"
@@ -255,7 +255,7 @@ h4 {
           </div>
         </div>
       </div>
-	        <div class="card" onclick="location.href = 'https://minigames.tech/colorsole/';">
+	        <div class="card" onclick="location.href = 'https://minigame.host/colorsole/';">
         <div class="imgBx">
           <img
             src="csn2.PNG"
@@ -268,7 +268,7 @@ h4 {
           </div>
         </div>
       </div>
-      <div class="card" onclick="location.href = 'https://minigames.tech/island/';">
+      <div class="card" onclick="location.href = 'https://minigame.host/island/';">
         <div class="imgBx">
           <img
             src="iwx2.PNG"
@@ -283,7 +283,7 @@ h4 {
       </div>
 
 
-	  <div class="card" onclick="location.href = ' https://minigames.tech/illuminate/';">
+	  <div class="card" onclick="location.href = ' https://minigame.host/illuminate/';">
         <div class="imgBx">
           <img
             src="ltx1.png"
