--- a/404.html
+++ b/404.html
@@ -156,7 +156,7 @@ h2 {
           How you got here is a mystery. But you can click the button below
           to go back to the homepage.
         </p>
-        <button class="btn green" onclick="location.href = 'https://minigames.tech/';">HOME</button>
+        <button class="btn green" onclick="location.href = 'https://minigame.host/';">HOME</button>
       </div>
     </div>
   </div>
