--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ h4 {
     width: 100%;
     z-index: 9999;
     transform: translateZ(0px);
-    background: #7bc353 	;
+    background: #2d302b 	;
     padding: 8px 0px;
 }
 .logo{
@@ -237,7 +237,7 @@ h4 {
 <body>
 <div class="fixedHeaderContainer"></div>
 
-<div class="logo"><img src="4.PNG" class="img-central"></div>	  
+<div class="logo"><img src="pics1.PNG" class="img-central"></div>	  
 <!--<div class="header"><h2> Games :</h2></div>	-->
 	
 <div class ="card_loader">
