--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ h4 {
 }
 .logo{
   width: 100%;
-    background: #e9f5e7
+	padding-top: 8px;
+    background: linear-gradient(to right, #f7df0e , #f9e642)
 	}
 	
 .img-central {
