--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 .container {
   display: table-row !important;
   }
+	
+	.logo{
+padding-top: 3vh !important;
+    height: 25vh !important;
+	}
+	
+	.img-central {
+    width: 80% !important;
+}
   
   .img-central {
   padding-top: 5vh !important;
@@ -48,6 +57,7 @@
     transition: bottom 0s !important;
   transition-delay: 0s !important;
   padding-left: 35vw !important;
+	  background: #ede9e94a !important;
   
   }
 
@@ -67,6 +77,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+    background: #ede387;
 
 }
 .container {
@@ -92,7 +103,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-      background: #fafafa;
+      background: #e6e6e6;
 }
 .container .card .content {
   position: absolute;
@@ -131,6 +142,7 @@ body{
   transition-delay: 0.6s;
   opacity: 0;
   transform: translateY(-20px);
+	background: #8888884a
 }
 .container .card:hover .content .contentBx h3 {
   opacity: 1;
@@ -265,7 +277,7 @@ h4 {
         </div>
         <div class="content">
           <div class="contentBx">
-            <h3>Color Sole<br /><br /><span>ColorSole is a color-elimination puzzle based on a square grid filled with different color. </span></h3>
+            <h3>Color Sole<br /><br /><span>A color-elimination puzzle based on a square grid filled with different color. </span></h3>
           </div>
         </div>
       </div>
