--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ padding-top: 3vh !important;
   font-size: 12px !important;
     opacity: 1 !important;
   transform: translateY(0px) !important;
+	  background: #ede9e94a !important;
   }
  }
 
